mattermost-k8s/k8s/namespace.yaml
### mattermost-k8s/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mattermost # Mattermost関連リソースを分離するためのネームスペース
